add search doctors functionality by name and gender and price